--- a/output/index.html
+++ b/output/index.html
@@ -2,7 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>BackstopJS Report</title>
+    <title>QAShot.com report page</title>
+
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <meta name="theme-color" content="#ffffff">
 
     <style>
       @font-face {
